build/log/idf_py_stdout_output_44814
[1/16] Building C object esp-idf/scheduler/CMakeFiles/__idf_scheduler.dir/scheduler.c.obj
FAILED: esp-idf/scheduler/CMakeFiles/__idf_scheduler.dir/scheduler.c.obj 
/home/mateus/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mateus/dev/projects/ENDAP/build/config -I/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/include -I/home/mateus/esp/esp-idf/components/newlib/platform_include -I/home/mateus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mateus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/include -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/mateus/esp/esp-idf/components/esp_hw_support/include -I/home/mateus/esp/esp-idf/components/esp_hw_support/include/soc -I/home/mateus/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/mateus/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/mateus/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/mateus/esp/esp-idf/components/heap/include -I/home/mateus/esp/esp-idf/components/log/include -I/home/mateus/esp/esp-idf/components/soc/include -I/home/mateus/esp/esp-idf/components/soc/esp32 -I/home/mateus/esp/esp-idf/components/soc/esp32/include -I/home/mateus/esp/esp-idf/components/hal/esp32/include -I/home/mateus/esp/esp-idf/components/hal/include -I/home/mateus/esp/esp-idf/components/hal/platform_port/include -I/home/mateus/esp/esp-idf/components/esp_rom/include -I/home/mateus/esp/esp-idf/components/esp_rom/include/esp32 -I/home/mateus/esp/esp-idf/components/esp_rom/esp32 -I/home/mateus/esp/esp-idf/components/esp_common/include -I/home/mateus/esp/esp-idf/components/esp_system/include -I/home/mateus/esp/esp-idf/components/esp_system/port/soc -I/home/mateus/esp/esp-idf/components/esp_system/port/include/private -I/home/mateus/esp/esp-idf/components/xtensa/include -I/home/mateus/esp/esp-idf/components/xtensa/esp32/include -I/home/mateus/esp/esp-idf/components/esp_timer/include -I/home/mateus/esp/esp-idf/components/lwip/include -I/home/mateus/esp/esp-idf/components/lwip/include/apps -I/home/mateus/esp/esp-idf/components/lwip/include/apps/sntp -I/home/mateus/esp/esp-idf/components/lwip/lwip/src/include -I/home/mateus/esp/esp-idf/components/lwip/port/include -I/home/mateus/esp/esp-idf/components/lwip/port/freertos/include -I/home/mateus/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/mateus/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mateus/dev/projects/ENDAP/components/data/io_image/include -I/home/mateus/esp/esp-idf/components/driver/include -I/home/mateus/esp/esp-idf/components/driver/deprecated -I/home/mateus/esp/esp-idf/components/driver/analog_comparator/include -I/home/mateus/esp/esp-idf/components/driver/dac/include -I/home/mateus/esp/esp-idf/components/driver/gpio/include -I/home/mateus/esp/esp-idf/components/driver/gptimer/include -I/home/mateus/esp/esp-idf/components/driver/i2c/include -I/home/mateus/esp/esp-idf/components/driver/i2s/include -I/home/mateus/esp/esp-idf/components/driver/ledc/include -I/home/mateus/esp/esp-idf/components/driver/mcpwm/include -I/home/mateus/esp/esp-idf/components/driver/parlio/include -I/home/mateus/esp/esp-idf/components/driver/pcnt/include -I/home/mateus/esp/esp-idf/components/driver/rmt/include -I/home/mateus/esp/esp-idf/components/driver/sdio_slave/include -I/home/mateus/esp/esp-idf/components/driver/sdmmc/include -I/home/mateus/esp/esp-idf/components/driver/sigma_delta/include -I/home/mateus/esp/esp-idf/components/driver/spi/include -I/home/mateus/esp/esp-idf/components/driver/temperature_sensor/include -I/home/mateus/esp/esp-idf/components/driver/touch_sensor/include -I/home/mateus/esp/esp-idf/components/driver/twai/include -I/home/mateus/esp/esp-idf/components/driver/uart/include -I/home/mateus/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/mateus/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/mateus/esp/esp-idf/components/esp_pm/include -I/home/mateus/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/mateus/dev/projects/ENDAP=. -fmacro-prefix-map=/home/mateus/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/scheduler/CMakeFiles/__idf_scheduler.dir/scheduler.c.obj -MF esp-idf/scheduler/CMakeFiles/__idf_scheduler.dir/scheduler.c.obj.d -o esp-idf/scheduler/CMakeFiles/__idf_scheduler.dir/scheduler.c.obj -c /home/mateus/dev/projects/ENDAP/components/kernel/scheduler/scheduler.c
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/scheduler.c:3:20: error: static declaration of 'scheduler_run_io' follows non-static declaration
    3 | static inline void scheduler_run_io(void){}
      |                    ^~~~~~~~~~~~~~~~
In file included from /home/mateus/dev/projects/ENDAP/components/kernel/scheduler/scheduler.c:1:
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/include/scheduler.h:4:6: note: previous declaration of 'scheduler_run_io' with type 'void(void)'
    4 | void scheduler_run_io(void);
      |      ^~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/scheduler.c:4:20: error: static declaration of 'scheduler_run_fieldbus' follows non-static declaration
    4 | static inline void scheduler_run_fieldbus(void){}
      |                    ^~~~~~~~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/include/scheduler.h:6:6: note: previous declaration of 'scheduler_run_fieldbus' with type 'void(void)'
    6 | void scheduler_run_fieldbus(void);
      |      ^~~~~~~~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/scheduler.c:5:20: error: static declaration of 'scheduler_run_automation' follows non-static declaration
    5 | static inline void scheduler_run_automation(void){}
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/include/scheduler.h:8:6: note: previous declaration of 'scheduler_run_automation' with type 'void(void)'
    8 | void scheduler_run_automation(void);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/scheduler.c:6:20: error: static declaration of 'scheduler_run_events' follows non-static declaration
    6 | static inline void scheduler_run_events(void){}
      |                    ^~~~~~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/include/scheduler.h:10:6: note: previous declaration of 'scheduler_run_events' with type 'void(void)'
   10 | void scheduler_run_events(void);
      |      ^~~~~~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/scheduler.c:7:20: error: static declaration of 'scheduler_run_diagnostics' follows non-static declaration
    7 | static inline void scheduler_run_diagnostics(void){}
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/include/scheduler.h:12:6: note: previous declaration of 'scheduler_run_diagnostics' with type 'void(void)'
   12 | void scheduler_run_diagnostics(void);
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~
[2/16] Building C object esp-idf/kernel_trace/CMakeFiles/__idf_kernel_trace.dir/kernel_trace.c.obj
[3/16] Linking C static library esp-idf/watchdog/libwatchdog.a
[4/16] Building C object esp-idf/determinism_probe/CMakeFiles/__idf_determinism_probe.dir/determinism_probe.c.obj
[5/16] Performing build step for 'bootloader'
[1/1] cd /home/mateus/dev/projects/ENDAP/build/bootloader/esp-idf/esptool_py && /home/mateus/.espressif/python_env/idf5.1_py3.12_env/bin/python /home/mateus/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/mateus/dev/projects/ENDAP/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[6/16] Building C object esp-idf/control_loop/CMakeFiles/__idf_control_loop.dir/control_loop.c.obj
ninja: build stopped: subcommand failed.
